--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
 mountpoints:
-  /:
-    url: "https://author-p121371-e1189853.adobeaemcloud.com/bin/franklin.delivery/AEMXSC/RefDemoEDS/main"
-    type: "markup"
-    suffix: ".html"
+   /:
+     url: "/bin/franklin.delivery/svfranklindemo/shmehta--15122025-12743/main"
+     type: "markup"
+     suffix: ".html"
